--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html>
-<head><meta http-equiv="Refresh" content="0; url=web" /></head>
+<head><meta http-equiv="Refresh" content="0; url=web/fase3/" /></head>
 <body></body>
 </html>
